Wrote conclusions Fixed some typing errors

--- a/Capitoli/metodiIntelligenti.tex
+++ b/Capitoli/metodiIntelligenti.tex
@@ -123,7 +123,7 @@ Possiamo vedere degli esempi di compressione con questa rete nelle immagini \ref
         \caption{Attention module semplificato}
         \label{fig:cheng2020AttnModuleB}
     \end{subfigure}
-    \caption{Varianti degli attention modules scviluppati da Cheng 2020 et al., immagine presa dal documento \cite{cheng2020learned}}
+    \caption{Varianti degli attention modules sviluppati da Cheng 2020 et al., immagine presa dal documento \cite{cheng2020learned}}
     \label{fig:cheng2020AttnModule}
 \end{figure}
 
