--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -150,7 +150,7 @@
   author = {InterDigital Communications, Inc.},
   title = {CompressAI},
   howpublished = {\url{https://interdigitalinc.github.io/CompressAI/}},
-  note = {Consultato: 17-10-2023}
+  note = {Consultato: 25-10-2023}
 }
 @inproceedings{wang2003multiscale,
   title={Multiscale structural similarity for image quality assessment},
@@ -229,4 +229,10 @@ author={
     Yuan~Yu and
     Xiaoqiang~Zheng},
   year={2015},
+}
+}@misc{CodeImagecompressionAI,
+  author = {Filippo Stella},
+  title = {Image Compression AI},
+  howpublished = {\url{https://github.com/ilofX/ImageCompressionAI}},
+  note = {Consultato: 07-11-2023}
 }
